# blog_os

./: .gitignore
mos/: Cargo.toml
mos/src/: main.rs  vga_buffer.rs
