[package]
name = "mos"
version = "0.1.0"
authors = ["halloween-jack <halloween.jack.dev@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.4.0"
volatile = "0.2.3"
spin = "0.4.9"

[dev-dependencies]
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64_blog_os.json"

[dependincies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
